--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@fontsource/sunflower": "^5.1.0",
+    "@mui/icons-material": "^6.1.7",
     "@mui/material": "^6.1.7",
     "@reduxjs/toolkit": "^2.3.0",
     "@tanstack/react-query": "^5.59.20",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.0"
   },
