--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "@mui/icons-material": "^6.1.7",
     "@mui/material": "^6.1.7",
     "@reduxjs/toolkit": "^2.3.0",
-    "@tanstack/react-query": "^5.59.20",
+    "@tanstack/react-query": "^5.60.2",
+    "axios": "^1.7.7",
+    "formik": "^2.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^6.28.0"
+    "react-router-dom": "^6.28.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
