--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.7.7",
     "formik": "^2.4.6",
     "react": "^18.3.1",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
