--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "@tanstack/react-query": "^5.60.2",
     "axios": "^1.7.7",
     "formik": "^2.4.6",
+    "passport": "^0.7.0",
+    "passport-github2": "^0.1.12",
+    "passport-local": "^1.0.0",
     "react": "^18.3.1",
     "react-confetti": "^6.1.0",
     "react-dom": "^18.3.1",
