--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^6.1.7",
     "@reduxjs/toolkit": "^2.3.0",
     "@tanstack/react-query": "^5.60.2",
+    "@toolpad/core": "^0.10.0",
     "axios": "^1.7.7",
     "formik": "^2.4.6",
     "passport": "^0.7.0",
@@ -28,6 +29,7 @@
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.0",
+    "recharts": "^2.13.3",
     "yup": "^1.4.0"
   },
   "devDependencies": {
