--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.0",
     "recharts": "^2.13.3",
-    "yup": "^1.4.0"
+    "yup": "^1.4.0",
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
